Figure out where tint should be placed...